# downloads

./: .gitignore  .travis.yml  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: test.yml
downloads/: download.py
test/: conftest.py  test_downloads.py  test_progress_bar.py
