[tool.poetry]
name = "downloads"
version = "1.0.0"
description = "Easy file downloads"
authors = ["Austin Davis-Richardson <harekrishna@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
