[tool.poetry]
name = "downloads"
version = "1.1.0"
description = "Easy file downloads"
authors = ["Austin Davis-Richardson <accounts@agdr.org>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"
